<resources>
    <string name="app_name">MAP_Assignment_First</string>
    <string name="Title">Assignment 1</string>
    <string name="StandardVersionLogic">STANDARD</string>
    <string name="AdvanceVersionLogic">ADVANCE - SCIENTIFIC</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="Modulus">%</string>
    <string name="Power">pow</string>
    <string name="Maximum">Max</string>
    <string name="Minimum">Min</string>
    <string name="Equal">=</string>
    <string name="Clear">C</string>
</resources>