<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B9000000">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@drawable/circle"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewScreen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="end|center"
        android:paddingEnd="10dp"
        android:background="@drawable/circle"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/version_Control_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/One"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Two"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Three"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Plus"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Four"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Five"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Six"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Minus"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Seven"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Eight"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Nine"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Multiply"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Clear"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Zero"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Equal"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Divide"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_AdvanceFeature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModulus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Modulus"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPower"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Power"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMaximum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Maximum"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinimum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="btnClickEvent"
                android:text="@string/Minimum"
                android:textSize="30sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculatorMode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/AdvanceVersionLogic"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>